--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?wlb9xy');
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?wlb9xy#iefix') format('embedded-opentype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?wlb9xy') format('truetype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?wlb9xy') format('woff'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?wlb9xy#icomoon') format('svg');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8d7y9v');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8d7y9v#iefix') format('embedded-opentype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?8d7y9v') format('truetype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?8d7y9v') format('woff'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?8d7y9v#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -26,6 +26,11 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-menu4 {
+	&:before {
+		content: @icon-menu4;
+	}
+}
 .icon-down-tiny {
 	&:before {
 		content: @icon-down-tiny;
