UI: fix statusbar border
(integrated from master branch change 9.2.1-717-g10d4e0d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -113,7 +113,7 @@
 statusbar
 {
     height: 32px;
-    border-bottom: 1px solid @border;
+    border-bottom: 1px solid @background;
     background: @primary;
 
     statusbarpanel > label
