UI: Fixed statusbar components not working properly due to UI updates
(integrated from master branch change 9.2.1-718-g817551d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -97,7 +97,7 @@
 }
 .menu-icon > dropmarker { visibility: collapse; }
 
-tab[widget] { .icon(); }
+tab[widget] { .icon(); .tab-text { margin-left: 4px; } }
 tab[widget="placesViewbox"] { .icon(); .icon-folder-open(); }
 tab[widget="openfilesViewbox"] { .icon(); .icon-files-empty2(); }
 tab[widget="collab-panel"] { .icon(); .icon-users2(); }
