--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8d7y9v');
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8d7y9v#iefix') format('embedded-opentype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?8d7y9v') format('truetype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?8d7y9v') format('woff'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?8d7y9v#icomoon') format('svg');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?i6lp4d');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?i6lp4d#iefix') format('embedded-opentype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?i6lp4d') format('truetype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?i6lp4d') format('woff'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?i6lp4d#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -206,9 +206,29 @@
 		content: @icon-code;
 	}
 }
+.icon-chevron-right {
+	&:before {
+		content: @icon-chevron-right;
+	}
+}
 .icon-plus {
 	&:before {
 		content: @icon-plus;
+	}
+}
+.icon-folder {
+	&:before {
+		content: @icon-folder;
+	}
+}
+.icon-angle-right {
+	&:before {
+		content: @icon-angle-right;
+	}
+}
+.icon-angle-down {
+	&:before {
+		content: @icon-angle-down;
 	}
 }
 .icon-quill4 {
