UI: Misc tweaks & improvements
(integrated from master branch change 9.2.1-719-g43939a7 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -34,7 +34,11 @@
 @icon-database: "\e034";
 @icon-markup: "\e035";
 @icon-code: "\e036";
+@icon-chevron-right: "\f054";
 @icon-plus: "\f067";
+@icon-folder: "\f07b";
+@icon-angle-right: "\f105";
+@icon-angle-down: "\f107";
 @icon-quill4: "\e91b";
 @icon-bookmark: "\e994";
 @icon-files-empty2: "\e9a0";
