--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -116,6 +116,7 @@ tabs
     
     tab:not([selected])
     {
+        color: fade(@foreground, 70%);
         border-bottom: 2px solid transparent;
     }
     
