--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -15,3 +15,11 @@
     visibility: collapse;
 }
 
+.status-toolbar
+{
+    height: 28px;
+    padding-bottom: 2px;
+    background: @primary;
+    -mox-box-align: center;
+    -moz-box-pack: start;
+}
