--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -112,7 +112,8 @@
 
 statusbar
 {
-    height: 32px;
+    height: 28px;
+    padding-bottom: 2px;
     border-bottom: 1px solid @background;
     background: @primary;
 
@@ -198,16 +199,6 @@ ko-pane[type="icons"] tab
 {
     padding: 6px;
     -moz-box-flex: 1;
-    
-    &:first-child
-    {
-        padding-left: 12px;
-    }
-    
-    &:last-child
-    {
-        padding-right: 12px;
-    }
     
     .tab-icon
     {
