UI: Resized and recolored some icons, make them mesh better with the UI
(integrated from master branch change 9.2.1-720-g7812ed9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -2,7 +2,15 @@
 
 .icon, [class^="icon-"], [class*=" icon-"], [class$="-icon"], [class*="-icon "]
 {
-    font-size: 16px;
+    font-size: 14px;
+}
+
+#toolbox_main, #toolbox_side
+{
+    .icon, [class^="icon-"], [class*=" icon-"], [class$="-icon"], [class*="-icon "]
+    {
+        font-size: 16px !important;
+    }
 }
 
 .icon
@@ -140,3 +148,8 @@ dropmarker {
     font-size: 12px;
 }
 
+image.tab-icon
+{
+    max-width: 14px;
+    height: 14px;
+}
