--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?i6lp4d');
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?i6lp4d#iefix') format('embedded-opentype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?i6lp4d') format('truetype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?i6lp4d') format('woff'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?i6lp4d#icomoon') format('svg');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?bg46gb');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?bg46gb#iefix') format('embedded-opentype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?bg46gb') format('truetype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?bg46gb') format('woff'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?bg46gb#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -206,9 +206,74 @@
 		content: @icon-code;
 	}
 }
+.icon-search {
+	&:before {
+		content: @icon-search;
+	}
+}
+.icon-star {
+	&:before {
+		content: @icon-star;
+	}
+}
+.icon-star-o {
+	&:before {
+		content: @icon-star-o;
+	}
+}
+.icon-close {
+	&:before {
+		content: @icon-close;
+	}
+}
+.icon-remove2 {
+	&:before {
+		content: @icon-remove2;
+	}
+}
+.icon-times {
+	&:before {
+		content: @icon-times;
+	}
+}
+.icon-cog {
+	&:before {
+		content: @icon-cog;
+	}
+}
+.icon-gear {
+	&:before {
+		content: @icon-gear;
+	}
+}
+.icon-inbox {
+	&:before {
+		content: @icon-inbox;
+	}
+}
+.icon-lock {
+	&:before {
+		content: @icon-lock;
+	}
+}
+.icon-align-left {
+	&:before {
+		content: @icon-align-left;
+	}
+}
 .icon-chevron-right {
 	&:before {
 		content: @icon-chevron-right;
+	}
+}
+.icon-check-circle {
+	&:before {
+		content: @icon-check-circle;
+	}
+}
+.icon-question-circle {
+	&:before {
+		content: @icon-question-circle;
 	}
 }
 .icon-plus {
@@ -216,9 +281,99 @@
 		content: @icon-plus;
 	}
 }
+.icon-asterisk {
+	&:before {
+		content: @icon-asterisk;
+	}
+}
+.icon-eye {
+	&:before {
+		content: @icon-eye;
+	}
+}
+.icon-eye-slash {
+	&:before {
+		content: @icon-eye-slash;
+	}
+}
+.icon-exclamation-triangle {
+	&:before {
+		content: @icon-exclamation-triangle;
+	}
+}
+.icon-warning {
+	&:before {
+		content: @icon-warning;
+	}
+}
 .icon-folder {
 	&:before {
 		content: @icon-folder;
+	}
+}
+.icon-thumb-tack {
+	&:before {
+		content: @icon-thumb-tack;
+	}
+}
+.icon-globe {
+	&:before {
+		content: @icon-globe;
+	}
+}
+.icon-filter {
+	&:before {
+		content: @icon-filter;
+	}
+}
+.icon-briefcase {
+	&:before {
+		content: @icon-briefcase;
+	}
+}
+.icon-cut {
+	&:before {
+		content: @icon-cut;
+	}
+}
+.icon-scissors {
+	&:before {
+		content: @icon-scissors;
+	}
+}
+.icon-square {
+	&:before {
+		content: @icon-square;
+	}
+}
+.icon-bars {
+	&:before {
+		content: @icon-bars;
+	}
+}
+.icon-navicon {
+	&:before {
+		content: @icon-navicon;
+	}
+}
+.icon-reorder {
+	&:before {
+		content: @icon-reorder;
+	}
+}
+.icon-columns {
+	&:before {
+		content: @icon-columns;
+	}
+}
+.icon-suitcase {
+	&:before {
+		content: @icon-suitcase;
+	}
+}
+.icon-plus-square {
+	&:before {
+		content: @icon-plus-square;
 	}
 }
 .icon-angle-right {
@@ -229,6 +384,71 @@
 .icon-angle-down {
 	&:before {
 		content: @icon-angle-down;
+	}
+}
+.icon-circle {
+	&:before {
+		content: @icon-circle;
+	}
+}
+.icon-code-fork {
+	&:before {
+		content: @icon-code-fork;
+	}
+}
+.icon-minus-square {
+	&:before {
+		content: @icon-minus-square;
+	}
+}
+.icon-check-square {
+	&:before {
+		content: @icon-check-square;
+	}
+}
+.icon-file {
+	&:before {
+		content: @icon-file;
+	}
+}
+.icon-file-text {
+	&:before {
+		content: @icon-file-text;
+	}
+}
+.icon-archive {
+	&:before {
+		content: @icon-archive;
+	}
+}
+.icon-slack {
+	&:before {
+		content: @icon-slack;
+	}
+}
+.icon-database2 {
+	&:before {
+		content: @icon-database2;
+	}
+}
+.icon-file-code-o {
+	&:before {
+		content: @icon-file-code-o;
+	}
+}
+.icon-toggle-off {
+	&:before {
+		content: @icon-toggle-off;
+	}
+}
+.icon-toggle-on {
+	&:before {
+		content: @icon-toggle-on;
+	}
+}
+.icon-hashtag {
+	&:before {
+		content: @icon-hashtag;
 	}
 }
 .icon-quill4 {
@@ -486,9 +706,9 @@
 		content: @icon-radio-unchecked;
 	}
 }
-.icon-scissors {
+.icon-scissors2 {
 	&:before {
-		content: @icon-scissors;
+		content: @icon-scissors2;
 	}
 }
 .icon-regexp2 {
