--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -34,11 +34,55 @@
 @icon-database: "\e034";
 @icon-markup: "\e035";
 @icon-code: "\e036";
+@icon-search: "\f002";
+@icon-star: "\f005";
+@icon-star-o: "\f006";
+@icon-close: "\f00d";
+@icon-remove2: "\f00d";
+@icon-times: "\f00d";
+@icon-cog: "\f013";
+@icon-gear: "\f013";
+@icon-inbox: "\f01c";
+@icon-lock: "\f023";
+@icon-align-left: "\f036";
 @icon-chevron-right: "\f054";
+@icon-check-circle: "\f058";
+@icon-question-circle: "\f059";
 @icon-plus: "\f067";
+@icon-asterisk: "\f069";
+@icon-eye: "\f06e";
+@icon-eye-slash: "\f070";
+@icon-exclamation-triangle: "\f071";
+@icon-warning: "\f071";
 @icon-folder: "\f07b";
+@icon-thumb-tack: "\f08d";
+@icon-globe: "\f0ac";
+@icon-filter: "\f0b0";
+@icon-briefcase: "\f0b1";
+@icon-cut: "\f0c4";
+@icon-scissors: "\f0c4";
+@icon-square: "\f0c8";
+@icon-bars: "\f0c9";
+@icon-navicon: "\f0c9";
+@icon-reorder: "\f0c9";
+@icon-columns: "\f0db";
+@icon-suitcase: "\f0f2";
+@icon-plus-square: "\f0fe";
 @icon-angle-right: "\f105";
 @icon-angle-down: "\f107";
+@icon-circle: "\f111";
+@icon-code-fork: "\f126";
+@icon-minus-square: "\f146";
+@icon-check-square: "\f14a";
+@icon-file: "\f15b";
+@icon-file-text: "\f15c";
+@icon-archive: "\f187";
+@icon-slack: "\f198";
+@icon-database2: "\f1c0";
+@icon-file-code-o: "\f1c9";
+@icon-toggle-off: "\f204";
+@icon-toggle-on: "\f205";
+@icon-hashtag: "\f292";
 @icon-quill4: "\e91b";
 @icon-bookmark: "\e994";
 @icon-files-empty2: "\e9a0";
@@ -90,7 +134,7 @@
 @icon-checkbox-unchecked2: "\ee6f";
 @icon-radio-checked: "\ee71";
 @icon-radio-unchecked: "\ee73";
-@icon-scissors: "\ee84";
+@icon-scissors2: "\ee84";
 @icon-regexp2: "\eed0";
 @icon-circle-css: "\eed2";
 @icon-circle-code: "\eed3";
