--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -27,3 +27,15 @@ tree.codetree {
 #main-toolboxrow toolbar > toolbaritem > toolbarbutton[type=menu] {
   -moz-binding: url("chrome://global/content/bindings/toolbarbutton.xml#menu-vertical");
 }
+
+menuitem:not([type]) {
+  -moz-binding: url("chrome://global/content/bindings/menu.xml#menuitem-iconic");
+}
+
+checkbox {
+  -moz-binding: url("chrome://global/content/bindings/checkbox.xml#checkbox-with-spacing");
+}
+
+radio {
+  -moz-binding: url("chrome://global/skin/globalBindings.xml#radio-with-spacing");
+}
