--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -17,9 +17,14 @@
 
 .status-toolbar
 {
-    height: 28px;
-    padding-bottom: 2px;
+    height: 27px;
+    padding: 0 0 2px 0;
     background: @primary;
     -mox-box-align: center;
     -moz-box-pack: start;
+    
+    textbox
+    {
+        margin: 0;
+    }
 }
