UI: Styled dialogs
(integrated from master branch change 9.2.1-724-g1e1a0b6 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -8,6 +8,11 @@ dialog
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#dialog-chromeless");
 }
 
+dialog
+{
+  -moz-binding: url("chrome://komodo/content/bindings/windows.xml#dialog-chromeless");
+}
+
 #toolbox_main {
   -moz-binding: url("chrome://komodo/content/bindings/toolbar.xml#toolbox-drag");
 }
