--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -67,6 +67,24 @@ dialog
     }
 }
 
+dialog
+{
+    background: @special;
+    color: @foreground;
+    padding: 6px;
+    
+    .dialog-button-box
+    {
+        -moz-box-pack: center;
+        -moz-box-align: center;
+        
+        spacer
+        {
+            visibility: collapse;
+        }
+    }
+}
+
 menupopup
 {
     background: @primary;
