UI: Colored SCC items rather than use icons
(integrated from master branch change 9.2.1-725-gc9ed592 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -19,6 +19,13 @@
 @icons-selected: #FFF;
 @icons-special: #3F8AFF;
 
+@scc-ok: #C5CAE9;
+@scc-new: #CDDC39;
+@scc-modified: #03A9F4; 
+@scc-deleted: #F44336;
+@scc-sync: #009688;
+@scc-conflict: #FF5722;
+
 @escaped-icons: %23FFF;
 @escaped-icons-selected: %23FFF;
 @escaped-folder: %23FFF;
