SDK: Implemented the dynamic button SDK
(integrated from master branch change 9.2.1-728-gea25225 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -49,3 +49,12 @@ checkbox {
 radio {
   -moz-binding: url("chrome://global/skin/globalBindings.xml#radio-with-spacing");
 }
+
+toolbarbutton:not([type="menu-button"]).dynamic-button,
+toolbarbutton[type="menu-button"].dynamic-button .toolbarbutton-menubutton-button {
+  -moz-binding: url('chrome://komodo/content/bindings/buttons.xml#dynamic-toolbarbutton');
+}
+
+toolbarbutton[type="menu-button"].dynamic-button {
+  -moz-binding: url('chrome://komodo/content/bindings/buttons.xml#dynamic-toolbarbutton-menu');
+}
