--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -26,6 +26,11 @@
 @scc-sync: #009688;
 @scc-conflict: #FF5722;
 
+@state-error: #D32F2F;
+@state-warning: #F57C00;
+@state-info: #1976D2;
+@state-ok: #689F38;
+
 @escaped-icons: %23FFF;
 @escaped-icons-selected: %23FFF;
 @escaped-folder: %23FFF;
