--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -146,7 +146,7 @@ toolbarbutton.menu-icon > label
     visibility: collapse;
 }
 
-:not(toolbarbutton) > toolbarbutton
+toolbarbutton:not(.box-inherit)
 {
     padding: 2px;
     margin: 2px;
