UI: Improved color contrast
(integrated from master branch change 9.2.1-731-ga5be112 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -1,10 +1,10 @@
 @dark: 1;
-@background: #21242A;
+@background: #28282E;
 @foreground: #FFF;
-@primary: #1C1E21;
-@secondary: #1C1E21;
+@primary: #202024;
+@secondary: #202024;
 @special: #3F8AFF;
-@border: #292C32;
+@border: #303036;
 @highlight: #3F8AFF;
 @selected: #326ECD;
 @selected-fg: #FFF;
