UI: Added new preference window icons
(integrated from master branch change 9.2.1-733-gd8cb2a1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -94,7 +94,7 @@
 .scc-button-history { .icon(); .icon-history(); }
 .scc-button-commit { .icon(); .icon-commit(); }
 .scc-button-push { .icon(); .icon-push(); }
-.debug-continue-icon { .icon(); .icon-play4(); }
+.debug-continue-icon { .icon(); .icon-play(); }
 .debug-break-icon { .icon(); .icon-pause2(); }
 .debug-stop-icon { .icon(); .icon-stop2(); }
 .debug-stepin-icon { .icon(); .icon-step-into(); }
