--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -31,58 +31,9 @@
 @icon-step-out: "\e031";
 @icon-record: "\e032";
 @icon-save-circle: "\e033";
-@icon-database: "\e034";
+@icon-database2: "\e034";
 @icon-markup: "\e035";
-@icon-code: "\e036";
-@icon-search: "\f002";
-@icon-star: "\f005";
-@icon-star-o: "\f006";
-@icon-close: "\f00d";
-@icon-remove2: "\f00d";
-@icon-times: "\f00d";
-@icon-cog: "\f013";
-@icon-gear: "\f013";
-@icon-inbox: "\f01c";
-@icon-lock: "\f023";
-@icon-align-left: "\f036";
-@icon-chevron-right: "\f054";
-@icon-check-circle: "\f058";
-@icon-question-circle: "\f059";
-@icon-plus: "\f067";
-@icon-asterisk: "\f069";
-@icon-eye: "\f06e";
-@icon-eye-slash: "\f070";
-@icon-exclamation-triangle: "\f071";
-@icon-warning: "\f071";
-@icon-folder: "\f07b";
-@icon-thumb-tack: "\f08d";
-@icon-globe: "\f0ac";
-@icon-filter: "\f0b0";
-@icon-briefcase: "\f0b1";
-@icon-cut: "\f0c4";
-@icon-scissors: "\f0c4";
-@icon-square: "\f0c8";
-@icon-bars: "\f0c9";
-@icon-navicon: "\f0c9";
-@icon-reorder: "\f0c9";
-@icon-columns: "\f0db";
-@icon-suitcase: "\f0f2";
-@icon-plus-square: "\f0fe";
-@icon-angle-right: "\f105";
-@icon-angle-down: "\f107";
-@icon-circle: "\f111";
-@icon-code-fork: "\f126";
-@icon-minus-square: "\f146";
-@icon-check-square: "\f14a";
-@icon-file: "\f15b";
-@icon-file-text: "\f15c";
-@icon-archive: "\f187";
-@icon-slack: "\f198";
-@icon-database2: "\f1c0";
-@icon-file-code-o: "\f1c9";
-@icon-toggle-off: "\f204";
-@icon-toggle-on: "\f205";
-@icon-hashtag: "\f292";
+@icon-code2: "\e036";
 @icon-quill4: "\e91b";
 @icon-bookmark: "\e994";
 @icon-files-empty2: "\e9a0";
@@ -118,7 +69,7 @@
 @icon-play3: "\ed7e";
 @icon-pause: "\ed7f";
 @icon-stop: "\ed80";
-@icon-play4: "\ed85";
+@icon-play: "\ed85";
 @icon-pause2: "\ed86";
 @icon-stop2: "\ed87";
 @icon-arrow-up3: "\edb9";
@@ -139,3 +90,82 @@
 @icon-circle-css: "\eed2";
 @icon-circle-code: "\eed3";
 @icon-terminal: "\eed4";
+@icon-search: "\f002";
+@icon-star: "\f005";
+@icon-star-o: "\f006";
+@icon-close: "\f00d";
+@icon-remove2: "\f00d";
+@icon-times: "\f00d";
+@icon-cog: "\f013";
+@icon-gear: "\f013";
+@icon-inbox: "\f01c";
+@icon-lock: "\f023";
+@icon-align-left: "\f036";
+@icon-chevron-right: "\f054";
+@icon-check-circle: "\f058";
+@icon-question-circle: "\f059";
+@icon-plus: "\f067";
+@icon-asterisk: "\f069";
+@icon-eye2: "\f06e";
+@icon-eye-slash: "\f070";
+@icon-exclamation-triangle: "\f071";
+@icon-warning: "\f071";
+@icon-folder2: "\f07b";
+@icon-thumb-tack: "\f08d";
+@icon-globe: "\f0ac";
+@icon-filter: "\f0b0";
+@icon-briefcase: "\f0b1";
+@icon-cut: "\f0c4";
+@icon-scissors: "\f0c4";
+@icon-square: "\f0c8";
+@icon-bars: "\f0c9";
+@icon-navicon: "\f0c9";
+@icon-reorder: "\f0c9";
+@icon-columns: "\f0db";
+@icon-suitcase2: "\f0f2";
+@icon-plus-square: "\f0fe";
+@icon-angle-right: "\f105";
+@icon-angle-down: "\f107";
+@icon-circle: "\f111";
+@icon-code-fork: "\f126";
+@icon-minus-square: "\f146";
+@icon-check-square: "\f14a";
+@icon-file: "\f15b";
+@icon-file-text: "\f15c";
+@icon-archive: "\f187";
+@icon-slack: "\f198";
+@icon-database22: "\f1c0";
+@icon-file-code-o: "\f1c9";
+@icon-toggle-off: "\f204";
+@icon-toggle-on: "\f205";
+@icon-hashtag: "\f292";
+@icon-print: "\f02f";
+@icon-font: "\f031";
+@icon-play2: "\f04b";
+@icon-info-circle: "\f05a";
+@icon-exclamation-circle: "\f06a";
+@icon-eye: "\f06f";
+@icon-folder: "\f07c";
+@icon-folder-open2: "\f07d";
+@icon-tasks: "\f0ae";
+@icon-chain: "\f0c1";
+@icon-link: "\f0c1";
+@icon-floppy-o: "\f0c7";
+@icon-save2: "\f0c7";
+@icon-suitcase: "\f0f3";
+@icon-keyboard-o: "\f11c";
+@icon-terminal2: "\f120";
+@icon-code: "\f121";
+@icon-cny: "\f157";
+@icon-jpy: "\f157";
+@icon-rmb: "\f157";
+@icon-yen: "\f157";
+@icon-language: "\f1ab";
+@icon-database: "\f1c1";
+@icon-share-alt: "\f1e0";
+@icon-binoculars: "\f1e5";
+@icon-paint-brush: "\f1fc";
+@icon-server: "\f233";
+@icon-clone: "\f24d";
+@icon-map-pin: "\f276";
+@icon-map-signs: "\f277";
