--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -1,4 +1,5 @@
-@import url("chrome://komodo/skin/plat/shared/icons_depend.less");
+@import url("chrome://komodo/skin/global/colors.less");
+@import url("resource://profile/colors.less");
 
 #prefWindow
 {
@@ -11,181 +12,175 @@
 
     treechildren::-moz-tree-row
     {
-        height: 26px;
+        height: 18px;
     }
 
     treechildren::-moz-tree-cell-text
     {
-        font-weight: bold;
-        padding-left: 28px;
+        padding-left: 16px;
     }
     
     treechildren::-moz-tree-cell-text(child-row)
     {
-        padding-left: 8px;
+        padding-left: 2px;
         font-weight: normal;
-    }
-    
-    treechildren::-moz-tree-twisty(child-row)
-    {
-        margin-left: 5px !important;
     }
 
     treechildren::-moz-tree-cell
     {
         background-size: 16px 16px;
-        background-position: 20px center;
+        background-position: 12px center;
         background-repeat: no-repeat;
     }
 
     treechildren::-moz-tree-cell(uiSettingsItem)
     {
-        background-image: @icon-pref-uiSettings;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/eye.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(codeIntelItem)
     {
-        background-image: @icon-pref-codeIntel;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/info-circle.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(fontsItem)
     {
-        background-image: @icon-pref-fonts;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/paint-brush.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(debuggerItem)
     {
-        background-image: @icon-pref-debugger;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/play.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(editorItem)
     {
-        background-image: @icon-pref-editor;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/code.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(environItem)
     {
-        background-image: @icon-pref-environ;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/cog.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(associationsItem)
     {
-        background-image: @icon-pref-associations;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/clone.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(findItem)
     {
-        background-image: @icon-pref-find;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/binoculars.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(ishellItem)
     {
-        background-image: @icon-pref-ishell;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/terminal.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(internationalItem)
     {
-        background-image: @icon-pref-international;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/cny.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(editKeys)
     {
-        background-image: @icon-pref-editKeys;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/keyboard-o.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(helpItem)
     {
-        background-image: @icon-pref-help;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/question-circle.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(languagesItem)
     {
-        background-image: @icon-pref-languages;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/language.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(mappedURIsItem)
     {
-        background-image: @icon-pref-mappedURIs;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/chain.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(newFilesItem)
     {
-        background-image: @icon-pref-newFiles;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/file-text.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(editSaveItem)
     {
-        background-image: @icon-pref-editSave;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/floppy-o.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(printItem)
     {
-        background-image: @icon-pref-print;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/print.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(serversItem)
     {
-        background-image: @icon-pref-servers;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/server.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(sharedSupportItem)
     {
-        background-image: @icon-pref-sharedSupport;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/share-alt.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(sourceCodeControlItem)
     {
-        background-image: @icon-pref-sourceCodeControl;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/database.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(syntaxCheckingItem)
     {
-        background-image: @icon-pref-syntaxChecking;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/check-circle.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(testPlanItem)
     {
-        background-image: @icon-pref-testPlan;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/tasks.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(webItem)
     {
-        background-image: @icon-pref-web;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/globe.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(projectsItem)
     {
-        background-image: @icon-pref-projects;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/suitcase.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(windowsIntegrationItem)
     {
-        background-image: @icon-pref-windowsIntegration;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/windows.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(commandoItem)
     {
-        background-image: @icon-pref-commando;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/map-pin.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(placesPref)
     {
-        background-image: @icon-pref-places;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/folder-open.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(httpInspectorItem)
     {
-        background-image: @icon-pref-httpinspect;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/map-signs.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(prefs_formatter_treeitem)
     {
-        background-image: @icon-pref-formatters;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/font.svg?size=16&color=@{escaped-icons}");
     }
 
     treechildren::-moz-tree-cell(notifyItem)
     {
-        background-image: @icon-pref-notify;
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/exclamation-circle.svg?size=16&color=@{escaped-icons}");
     }
 
 }
@@ -200,13 +195,13 @@
 
     treechildren::-moz-tree-row
     {
-        height: 26px;
+        height: 18px;
     }
 
     treechildren::-moz-tree-cell-text
     {
-        font-weight: bold;
-        padding-left: 4px;
+        font-weight: normal;
+        padding-left: 2px;
     }
     
     treechildren::-moz-tree-cell-text(child-row)
